chore: created auth controllers and helper functions
